name:                bwladder
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/bwladder#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Liquipedia
                     , Common
                     , Fish
                     , Render
  build-depends:       base >= 4.7 && < 5
                     , protolude
                     , text
                     , xml-conduit
                     , html-conduit
                     , blaze-html
                     , time
                     , directory
                     , HTTP
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings

executable bwl
  hs-source-dirs:      parser
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bwladder
                     , protolude
                     , text
                     , html-conduit
                     , xml-conduit
                     , blaze-html
                     , blaze-markup
                     , time
                     , directory
                     , HTTP
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings

test-suite bwladder-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bwladder
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/bwladder
